/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.models";

package net;

import "net/region/RegionEnumsProto.proto";

// Corresponds to org.onosproject.net.Region.

message RegionProto {
    string region_id = 1;
    net.region.RegionTypeProto type = 2;
    string name = 3;

    // List<Set<NodeId>> masters();
    // Since masters is a list of set of NodeIds,
    // the following message is required.
    message NodeIdSet {
        repeated string node_id = 1;
    }

    repeated NodeIdSet masters = 4;
    map<string, string> annotations = 5;
}